feat: save and update tasks with browser storage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <button type="submit">Add</button>
     </form>
     <hr />
-    <section id="tasks"></section>
+    <section>
+      <ul id="tasks"></ul>
+    </section>
   </main>
   <script src="./js/index.js"></script>
 </body>
